cmake_minimum_required(VERSION 3.20)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wall -Werror")

project(tasks LANGUAGES CXX)

file(GLOB LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.h")
file(GLOB LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.cpp")
set(LIB_CREATED FALSE)
if (LIB_SOURCES)
    set(LIB_CREATED TRUE)
    add_library(Lib ${LIB_HEADERS} ${LIB_SOURCES})
    target_include_directories(Lib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/lib")
endif()

foreach (PART RANGE 1 19)
    file(GLOB PART_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/${PART}/*.cpp")
    foreach (TASK ${PART_SOURCES})
        get_filename_component(TASK_NAME ${TASK} NAME_WE)
        set(TARGET_NAME "${PART}_${TASK_NAME}")
        add_executable(${TARGET_NAME} ${TASK})
        if (LIB_CREATED)
            target_link_libraries(${TARGET_NAME} PRIVATE Lib)
        endif()
    endforeach ()
endforeach ()